--- a/vshare_app/package.json
+++ b/vshare_app/package.json
@@ -16,8 +16,12 @@
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-js-stepper": "^0.2.1",
+    "react-native-progress-steps": "^1.3.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-step-indicator": "0.0.11",
+    "react-native-steps": "^1.3.0",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
   },
