--- a/vshare_app/package.json
+++ b/vshare_app/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.2.4",
     "@react-navigation/stack": "^5.2.19",
@@ -20,6 +21,8 @@
     "react-native-progress-steps": "^1.3.0",
     "react-native-safe-area-context": "^0.7.3",
     "react-native-screens": "^2.7.0",
+    "react-native-sidebar": "^0.3.0",
+    "react-native-simple-toast": "^1.1.2",
     "react-native-step-indicator": "0.0.11",
     "react-native-steps": "^1.3.0",
     "react-redux": "^7.2.0",
