Add api call for signup

--- a/vshare_app/package.json
+++ b/vshare_app/package.json
@@ -26,7 +26,8 @@
     "react-native-step-indicator": "0.0.11",
     "react-native-steps": "^1.3.0",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "sync-storage": "^0.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
